# aira

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: main.py
src/: encryption.py  main.py  settings.py
src/agent/: README.md  __init__.py  agent.py  prompts.py  types.py
src/api/: README.md
src/api/routes/: __init__.py  health.py
src/db/: README.md  __init__.py  enums.py  models.py  session.py
src/llm/: README.md  __init__.py  client.py  errors.py  types.py
src/repository/: __init__.py  base.py  credential.py  integration.py  user.py
src/services/: README.md
src/tools/: README.md  __init__.py  base.py  echo.py  registry.py  schemas.py
tests/: test_agent.py  test_agent_tools.py  test_llm.py  test_llm_integration.py
