[project]
name = "aira"
version = "0.1.0"
description = "AI-Powered Responsive Intelligence Assistant"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",

    # LLM abstraction
    "litellm>=1.81.13",

    # Scheduler
    "apscheduler>=3.11.2",

    # Database
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",

    # Google APIs
    "google-api-python-client>=2.190.0",
    "google-auth-oauthlib>=1.2.4",
    "google-auth-httplib2>=0.3.0",

    # HTTP client (ntfy + FastAPI test client)
    "httpx>=0.28.1",

    # Config
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",

    # Encryption
    "cryptography>=46.0.5",

    # CLI
    "rich>=14.3.3",
    "typer>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.4",
]
